--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 	 Country:
 	 </td>
 	 <td>
-	 <input type ="radio" name ="syr" value = "SYRIA"/> Syria <br/>
-     <input type ="radio" name ="pla" value = "PALASTAIN"/> Palastain<br/>
-     <input type ="radio" name ="leb" value = "LEBANON"/>Lebanon
+	 <input type ="radio" name ="Country" value = "SYRIA"/> Syria <br/>
+     <input type ="radio" name ="Country" value = "PALASTAIN"/> Palastain<br/>
+     <input type ="radio" name ="Country" value = "LEBANON"/>Lebanon
 	 
 	 </td>
 	 </tr>
