--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
        <!------------------------------------->
 	     <tr>
 	   <td colspan="2" align="center">  <br/>
-	  <input type = "submit" value = "Submit Order" />
-      <input type = "reset" value = "Clear Order Form" />
+	  <input type = "submit" value = "Submit" />
+      <input type = "reset" value = "Reset Form" />
 	   </td
 	 <td>
 	 </td>
